--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           channel: 'stable'
       - name: Build APK
-        run: |
-          yes y | flet build apk --project "NewaiPrime" --product "Newai Prime" --package-name "com.sametcan88.newai"
+  run: |
+    flet build apk --project "newai" --org "com.sametcan88" --product "Newai Prime"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
