--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,17 +8,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Install Flet
-        run: pip install flet
+
+      - name: Install Dependencies
+        run: |
+          pip install flet
+
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+
       - name: Build APK
-  run: |
-    flet build apk --project "newai" --org "com.sametcan88" --product "Newai Prime"
+        run: flet build apk --project "newai" --org "com.sametcan88" --product "Newai Prime"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
