--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,14 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install flet
+          pip install flet groq
 
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
 
       - name: Build APK
-        run: flet build apk --project "newai" --org "com.sametcan88" --product "Newai Prime"
+        run: flet build apk --org "com.sametcan88" --product "Newai Prime"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
