--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,14 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Create Requirements File
+        run: |
+          echo "flet" > requirements.txt
+          echo "groq" >> requirements.txt
+
       - name: Install Dependencies
         run: |
-          pip install flet groq  # İşte buraya 'groq' ekledik!
+          pip install flet groq
 
       - uses: subosito/flutter-action@v2
         with:
